@@ -15,6 +15,9 @@ namespace ContractConfigurator
      */
     public class HasCrewFactory : ParameterFactory
     {
+        protected string trait { get; set; }
+        protected int minExperience { get; set; }
+        protected int maxExperience { get; set; }
         protected int minCrew { get; set; }
         protected int maxCrew { get; set; }
 
@@ -22,6 +25,45 @@ namespace ContractConfigurator
         {
             // Load base class
             bool valid = base.Load(configNode);
+
+            // Get trait
+            if (!configNode.HasValue("trait"))
+            {
+                trait = null;
+            }
+            else
+            {
+                try
+                {
+                    trait = configNode.GetValue("trait");
+                }
+                catch (Exception e)
+                {
+                    valid = false;
+                    Debug.LogError("ContractConfigurator: " + ErrorPrefix(configNode) +
+                        ": error parsing trait: " + e.Message);
+                }
+            }
+
+            // Get minimum experience level
+            if (configNode.HasValue("minExperience"))
+            {
+                minExperience = Convert.ToInt32(configNode.GetValue("minExperience"));
+            }
+            else
+            {
+                minExperience = 0;
+            }
+
+            // Get maximum experience level
+            if (configNode.HasValue("maxExperience"))
+            {
+                maxExperience = Convert.ToInt32(configNode.GetValue("maxExperience"));
+            }
+            else
+            {
+                maxExperience = 5;
+            }
 
             // Get minCrew
             if (configNode.HasValue("minCrew"))
@@ -48,7 +90,7 @@ namespace ContractConfigurator
 
         public override ContractParameter Generate(Contract contract)
         {
-            return new HasCrew(title, minCrew, maxCrew);
+            return new HasCrew(title, trait, minCrew, maxCrew, minExperience, maxExperience);
         }
     }
 }
