@@ -61,6 +61,22 @@ CONTRACT_TYPE
             name = HasCrew1
             type = HasCrew
 
+            // (Optional) The type of trait required.  Valid values are:
+            //    Pilot
+            //    Engineer
+            //    Scientist
+            trait = Pilot
+
+            // (Optional) Minimum and maximum experience level.  Default values are
+            // 0 and 5 (for min/max).
+            minExperience = 1
+            maxExperience = 2
+
+            // (Optional) Minimum and maximum count.  Default values are 1 and
+            // int.MaxValue (for min/max).
+            minCount = 1
+            maxCount = 1
+
             disableOnStateChange = false
         }
 
